# log-collector

./: docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs
server/: Cargo.toml
server/src/: db.rs  handlers.rs  main.rs
