[package]
name = "api"
version = "0.1.0"
authors = ["Takahiro Miyamoto <takahiro.miyamoto@glv.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"

[dependencies.chrono]
features = ["serde"]
version = "0.4"